Fixed stock taxation

--- a/app/templates/project_stocks.html
+++ b/app/templates/project_stocks.html
@@ -332,8 +332,8 @@ $(document).ready(function() {
             <tr>
               <td>${rowData["quantity"]}</td>
               <td>${rowData["sell_price"]} USD</td>
-              <td>${rowData["quantity"] * rowData["sell_price_eur"]}</td>
-              <td>${rowData["taxes"]}</td>
+              <td>${(rowData["quantity"] * rowData["sell_price_eur"]).toFixed(2)}</td>
+              <td>${rowData["taxes"]} (${(rowData["taxes"] * 100 / (rowData["quantity"] * rowData["sell_price_eur"])).toFixed(2)} %)</td>
               <td>${(rowData["quantity"] * rowData["sell_price_eur"] - rowData["taxes"]).toFixed(2)}</td>
               <td>
                 <a class="btn btn-danger btn-sm" href="{{ url_for('.rm_sell_event', project_id=project.id) }}?id=${rowData["sale_id"]}">
